BUILD: remove kotlin